# buttplug-cpp

./: CMakeLists.txt  test.cpp
inc/Buttplug/: Client.hpp  Connector.hpp  Device.hpp  DeviceParts.hpp  Messages.hpp
src/: Client.cpp  Device.cpp  DeviceParts.cpp  Messages.cpp  WebsocketConnector.cpp
